kustomize/base/service-confidential-inference.yaml
# Generated by hack/gen-kustomize.sh; do not edit.
apiVersion: v1
kind: Service
metadata:
  name: confidential-inference
  labels:
    app.kubernetes.io/name: confidential-inference
    app.kubernetes.io/instance: trcs
    app.kubernetes.io/version: 0.1.0
    app.kubernetes.io/part-of: trustedrouter-confidential-stack
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: confidential-inference
    app.kubernetes.io/instance: trcs
  ports:
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
